WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
237698
Fix WebContent jetsam that occurs when selecting text in a large e-mail
https://bugs.webkit.org/show_bug.cgi?id=237698
Summary
Fix WebContent jetsam that occurs when selecting text in a large e-mail
Ben Nham
Reported
2022-03-09 21:40:03 PST
WebContent often jetsams when selecting text in a large e-mail in MobileMail.
Attachments
Patch
(3.24 KB, patch)
2022-03-09 21:41 PST
,
Ben Nham
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(3.06 KB, patch)
2022-03-09 21:59 PST
,
Ben Nham
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ben Nham
Comment 1
2022-03-09 21:40:31 PST
rdar://88549631
Ben Nham
Comment 2
2022-03-09 21:41:20 PST
Created
attachment 454314
[details]
Patch
Simon Fraser (smfr)
Comment 3
2022-03-09 21:50:39 PST
Comment on
attachment 454314
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=454314&action=review
> Source/WebCore/page/FrameView.cpp:2735 > +#if PLATFORM(IOS_FAMILY) > + tiledBacking->prepopulateRect(FloatRect(position, exposedContentRect().size())); > +#else > + auto rect = FloatRect(position, visibleContentRect().size()); > + if (auto exposedRect = viewExposedRect()) { > + exposedRect->setLocation(position); > + rect.intersect(*exposedRect); > + } > + tiledBacking->prepopulateRect(rect); > +#endif
I generally prefer the #ifdef to just surround the argument computation, so there's only one line that calls tiledBacking->prepopulateRect(). Are you sure you want to change the macOS behavior at this time?
Ben Nham
Comment 4
2022-03-09 21:54:45 PST
It's probably better to leave the macOS path alone since content rects work differently on that platform and we don't have evidence of this bug on macOS. I'll submit a newer version of the patch.
Ben Nham
Comment 5
2022-03-09 21:59:05 PST
Created
attachment 454315
[details]
Patch
EWS
Comment 6
2022-03-11 09:40:53 PST
Committed
r291175
(
248335@main
): <
https://commits.webkit.org/248335@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 454315
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug